--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "homepage": "https://github.com/DavidQF555/MAL.js",
     "devDependencies": {
         "@types/node": "^16.11.26",
-        "typescript": "^4.4.4",
-        "eslint": "^8.43.0"
+        "eslint": "^8.43.0",
+        "typescript": "^4.4.4"
+    },
+    "dependencies": {
+        "axios": "^1.6.8"
     }
 }
