--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "url": "git+https://github.com/DavidQF555/MAL.js.git"
     },
     "scripts": {
-        "build": "tsc"
+        "build": "tsc",
+        "lint": "eslint . --ext .ts --fix"
     },
     "author": "DavidQF555",
     "license": "MIT",
@@ -17,7 +18,9 @@
     "homepage": "https://github.com/DavidQF555/MAL.js",
     "devDependencies": {
         "@types/node": "^16.11.26",
-        "eslint": "^8.43.0",
+        "@typescript-eslint/eslint-plugin": "^7.4.0",
+        "@typescript-eslint/parser": "^7.4.0",
+        "eslint": "^8.57.0",
         "typescript": "^4.4.4"
     },
     "dependencies": {
