--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "mal.js",
+    "name": "@davidqf555/mal.js",
     "version": "1.0.0",
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
