--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
     "name": "@davidqf555/mal.js",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
+    "files": ["./dist"],
     "type": "module",
     "repository": {
         "type": "git",
