--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,11 @@
     "compilerOptions": {
         "module": "ES6",
         "moduleResolution": "node",
+        "declaration": true,
+        "declarationDir": "./dist/types",
         "sourceMap": true,
-        "target": "es6",
-        "resolveJsonModule": true,
-        "outDir": "./dist",
+        "target": "ES6",
+        "outDir": "./dist/src",
     },
     "include": [
         "src"
