--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     ],
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/DavidQF555/MAL.js.git"
+        "url": "https://github.com/DavidQF555/MAL.js.git"
     },
     "scripts": {
         "build": "tsc",
@@ -26,13 +26,13 @@
     },
     "homepage": "https://github.com/DavidQF555/MAL.js",
     "devDependencies": {
-        "@types/node": "^16.11.26",
-        "@typescript-eslint/eslint-plugin": "^7.4.0",
-        "@typescript-eslint/parser": "^7.4.0",
-        "eslint": "^8.57.0",
-        "typescript": "^4.4.4"
+        "@types/node": "^20.14.5",
+        "@typescript-eslint/eslint-plugin": "^7.13.1",
+        "@typescript-eslint/parser": "^7.13.1",
+        "eslint": "^8.56.0",
+        "typescript": "^5.4.5"
     },
     "dependencies": {
-        "axios": "^1.6.8"
+        "axios": "^1.7.2"
     }
 }
