--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
     "compilerOptions": {
-        "module": "ES6",
+        "module": "ES2022",
         "moduleResolution": "node",
+        "strict": true,
         "declaration": true,
         "declarationDir": "./dist/types",
         "sourceMap": true,
-        "target": "ES6",
-        "outDir": "./dist/src",
+        "target": "ES2022",
+        "outDir": "./dist",
     },
     "include": [
         "src"
