--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "@davidqf555/mal.js",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "main": "./dist/index.js",
     "types": "./dist/types/index.d.ts",
-    "files": ["./dist"],
+    "files": ["./dist", "./src"],
     "type": "module",
     "description": "Wrapper for the MyAnimeList API",
     "keywords": [
