--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "module": "ES2022",
         "moduleResolution": "node",
+        "noImplicitOverride": true,
         "strict": true,
         "declaration": true,
         "declarationDir": "./dist/types",
