--- a/package.json
+++ b/package.json
@@ -26,13 +26,12 @@
     },
     "homepage": "https://github.com/DavidQF555/MAL.js",
     "devDependencies": {
-        "@types/node": "^20.14.5",
-        "@typescript-eslint/eslint-plugin": "^7.13.1",
-        "@typescript-eslint/parser": "^7.13.1",
-        "eslint": "^8.56.0",
-        "typescript": "^5.4.5"
+        "@types/node": "^22.13.10",
+        "eslint": "^9.22.0",
+        "typescript": "^5.8.2",
+        "typescript-eslint": "^8.26.1"
     },
     "dependencies": {
-        "axios": "^1.7.2"
+        "axios": "^1.8.3"
     }
 }
